# cbpo

plat-pf-api/: .env.example  .gitignore  .gitlab-ci.yml  AI.md  CHANGELOG.md  GIAO_TRINH_PLAT_PF_API.md  GIT.md  README.md  dev.yml  docker-compose.yml  pyproject.toml  values.tpl.yml
plat-pf-api/.gitlab/merge_request_templates/: default.md
plat-pf-api/app/core/: __init__.py  admin.py  authentication.py  celery.py  celery_task_manger.py  context.py  exception_handler.py  exceptions.py  firebase.py  helper.py  models.py  pagination.py  serializers.py  simple_authentication.py  tasks.py  utils.py  views.py
plat-pf-api/app/csp/: apps.py  middleware.py  utils.py
plat-pf-api/app/database/: admin.py  apps.py  helper.py  models.py  tasks.py
plat-pf-api/app/edi/: admin.py  apps.py  models.py  tasks.py
plat-pf-api/app/es/: admin.py  apps.py  helper.py  models.py  tasks.py
plat-pf-api/app/extensiv/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  variables.py
plat-pf-api/app/financial/: admin.py  apps.py  exceptions.py  models.py  tasks.py  urls.py
plat-pf-api/app/job/: admin.py  models.py  tasks.py
plat-pf-api/app/selling_partner/: admin.py  apps.py  exceptions.py  models.py  tasks.py  urls.py
plat-pf-api/app/shopify_partner/: admin.py  apps.py  exceptions.py  models.py  serializers.py  static_setting.py  urls.py  views.py
plat-pf-api/app/stat_report/: admin.py  apps.py  models.py  tasks.py  urls.py
plat-pf-api/app/third_party_logistic/: admin.py  apps.py  models.py  tasks.py
plat-pf-api/compose/django/: Dockerfile  Dockerfile-dev  entrypoint.sh  gunicorn.conf.py  gunicorn.sh  start-celery-beat.sh  start-celery-worker-bulk.sh  start-celery-worker-community.sh  start-celery-worker-data-source-calculation.sh  start-celery-worker-import-lib.sh  start-celery-worker-mapping-source.sh  start-celery-worker-selling-partner.sh  start-celery-worker-sync-analysis.sh  start-celery-worker-sync-data-source.sh  start-celery-worker-time-control.sh  start-celery-worker.sh  start-dev.sh  uvicorn.sh
plat-pf-api/config/: api.py  urls.py
plat-pf-api/config/settings/: common.py
plat-pf-api/requirements/: base.txt  local.txt  production.txt
plat-pf-api/scripts/: check-build-deploy.sh  wait_lib_build_done.sh
plat-pf-api/templates/: _base_sending_email_template.html  healthz.html
plat-pf-api/templates/alert/: notice_sale_custom_view.html
plat-pf-api/templates/client/: notice_bulk_processing.html
plat-pf-api/templates/shopify/: shopify_integration_message.html
plat-pf-api/templates/system/: notice_missing_brands.html  notice_no_brand_settings.html  stats.html
plat-portal-api/: .env.example  .flake8  .gitignore  .gitlab-ci.yml  BACKLOG_SUGGESTIONS.md  BACKLOG_SUGGESTIONS_EXT.md  BACKLOG_TICKETS.md  CHANGELOG.md  N1_QUERY_PROBLEMS_IN_PERMISSION_MANAGEMENT.md  PERMISSION_ANALYSIS_AND_RECOMMENDATIONS.md  PERMISSION_MANAGEMENT_DETAILED_WORKFLOW.md  PERMISSION_MANAGEMENT_WORKFLOW_ANALYSIS.md  README.md  SECURITY_VULNERABILITIES_AND_ISSUES.md  dev.yml  docker-compose.yml  pyproject.toml  values.tpl.yml
plat-portal-api/.gitlab/merge_request_templates/: default.md
plat-portal-api/app/app_setting/: admin.py  apps.py  config_static_variable.py  forms.py  models.py  receivers.py  serializers.py  services.py  tasks.py  urls.py  views.py
plat-portal-api/app/core/: celery.py  context.py  custom_bulk_sync_all_objects.py  exceptions.py  firebase.py  helpers.py  pagination.py  services_authentication.py  services_status.py  simple_authentication.py  tasks.py  utils.py  views.py
plat-portal-api/app/payments/: admin.py  apps.py  config.py  exceptions.py  forms.py  models.py  serializers.py  serializers_coupon.py  tasks.py  (+6 more)
plat-portal-api/certificates/: credential.example.json  credential_google_auth.example.json
plat-portal-api/config/: api.py  urls.py
plat-portal-api/requirements/: base.txt  local.txt  production.txt
plat-portal-api/scripts/: check-build-deploy.sh
plat-portal-api/templates/: base_sending_email_template.html  healthz.html
(+1711 files in other folders)
